--- a/src/source.extension.resx
+++ b/src/source.extension.resx
@@ -121,7 +121,7 @@
     <value>Clean on Close</value>
   </data>
   <data name="112" xml:space="preserve">
-    <value>Closes open documents and collapses folders automatically when a solution is being closed</value>
+    <value>Cleans up the solution for the next time you open it. Closes open documents and collapses folders automatically when a solution is being closed. </value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
