--- a/src/source.extension.resx
+++ b/src/source.extension.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="110" xml:space="preserve">
-    <value>Clean on Close</value>
+    <value>Clean Solution</value>
   </data>
   <data name="112" xml:space="preserve">
     <value>Cleans up the solution for the next time you open it. Closes open documents and collapses folders automatically when a solution is being closed. </value>
